k8s/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dominio-ingress-api
spec:
  ingressClassName: nginx
  rules:
    - host: zan-30.uffs.edu.br
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: api-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-ingress-api
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite /rotten http://zan-30.uffs.edu.br;
spec:
  ingressClassName: nginx
  rules:    
    - http:
        paths:
        - pathType: Prefix
          path: "/rotten"
          backend:
            service:
              name: api-service
              port:
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: padrao-ingress
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
